--- a/.env.dist
+++ b/.env.dist
@@ -1,13 +1,15 @@
 #MPDOCS_ENVIRONMENT=DEVELOPMENT
 #MPDOCS_SKIP_LOGIN=1
+#MPDOCS_AUTHOR=your name
 
 #CPMULTIPLANE_REPO=/path/to/local-mp-repo
 #COCKPIT_REPO=/path/to/local-cp-repo
+#COCKPIT_ADDONS_REPOS=/path/to/local/parent-dir-of-cockpit-addons-repositories
 
 #PORT=80
-
 #DOCKER_USER=1000
 #DOCKER_GROUP=1000
+
 #MAILER_FROM=noreply@example.com
 #MAILER_FROM_NAME=Web form
 #MAILER_TRANSPORT=smtp
