added storage files

--- a/.gitignore
+++ b/.gitignore
@@ -14,14 +14,15 @@ composer.lock
 cockpit.memory.sqlite
 
 # contains sensitive data
-cockpit.sqlite
+# cockpit.sqlite
+*.sqlite
 
 # local files - either generated with composer or added manually
 # delete/modify this part in your actual project to keep everything in version control
 # /lib/
 # /cpdata/addons/
 # /cpdata/config/
-/cpdata/storage/*/*
+# /cpdata/storage/*/*
 # /.htaccess
 /.env
 # /cp
