added German i18n files

--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,8 @@
 #MPDOCS_ENVIRONMENT=DEVELOPMENT
+
 #MPDOCS_SKIP_LOGIN=1
 #MPDOCS_AUTHOR=your name
+#MPDOCS_LANG=de
 
 #CPMULTIPLANE_REPO=/path/to/local-mp-repo
 #COCKPIT_REPO=/path/to/local-cp-repo
