--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
         "raffaelj/cpmultiplane": "dev-add-permalink-support as 0.2.5-dev",
         "aheinze/cockpit": "dev-next as 0.11.3-dev",
         "raffaelj/cockpit-imageresize": "^0.2.0",
-        "raffaelj/cockpit-bettermarkdown": "^0.1.0",
-        "raffaelj/cockpit-rljutils": "dev-master"
+        "raffaelj/cockpit-bettermarkdown": "dev-master",
+        "raffaelj/cockpit-rljutils": "dev-master",
+        "raffaelj/cockpit-cpmultiplanegui": "dev-master as 0.2.3-dev"
     },
     "config": {
         "vendor-dir": "lib/vendor",
