don't expose port to LAN

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,10 @@ services:
       #- ${COCKPIT_ADDONS_REPOS}/cockpit_phpLiteAdmin:/var/www/html/cpdata/addons/phpLiteAdmin
       #- ${COCKPIT_ADDONS_REPOS}/cockpit_BetterMarkdown:/var/www/html/cpdata/addons/BetterMarkdown
       #- ${COCKPIT_ADDONS_REPOS}/cockpit_CpMultiplaneGUI:/var/www/html/cpdata/addons/CpMultiplaneGUI
+      #- ${COCKPIT_ADDONS_REPOS}/cockpit_ImageResize:/var/www/html/cpdata/addons/ImageResize
 
     ports:
-      - ${PORT:-8080}:80
+      - ${PORT:-127.0.0.1:8080}:80
 
     # apache can't start without that fix if the user was changed
     # see https://hub.docker.com/_/php/ (scroll down to "Running as an arbitrary user")
