--- a/lib/CpMultiplane/package.json
+++ b/lib/CpMultiplane/package.json
@@ -3,5 +3,5 @@
     "version": "0.2.4",
     "license": "MIT",
     "author": "Raffael Jesche",
-    "homepage": "https://github.com/raffaelj/CpMultiplane"
+    "homepage": "https://cpmultiplane.rlj.me"
 }
