--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "raffaelj/cpmultiplane": "^0.3.1",
+        "raffaelj/cpmultiplane": "dev-master as 0.3.2",
         "aheinze/cockpit": "^0.12.2",
         "raffaelj/cockpit-imageresize": "^0.2.2",
         "benjaminhoegh/parsedown-toc": "dev-fix-compatibility-with-1.8.0-beta-7",
